--- a/serverless.yml
+++ b/serverless.yml
@@ -1,58 +1,23 @@
+# Name of service. Service consists of function and integrated API endpoint
 service: random-sorting-service
 provider:
+  # Here we define provider specific details. We're using AWS cloud provider and node here
   name: aws
   runtime: nodejs12.x
   region: eu-central-1
 
 functions:
+  # Here we describe a function and an event for invoking this function
+  # Name of function
   getRandomHouseAndHousemates:
+    # Location of function's code. "getRandomHouseAndHousemates" is the name of our exported module
     handler: handler.getRandomHouseAndHousemates
     events:
+      # Integrate with an API Gateway event
       - http:
+          # This is our API endpoint
           path: house
+          # We only need to support a GET request
           method: get
+          # Because we'll eventually use our endpoint in a React app and call it from a different domain, we enable cors.
           cors: true
-#      - websocket: $connect
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-#      - alb:
-#          listenerArn: arn:aws:elasticloadbalancing:us-east-1:XXXXXX:listener/app/my-load-balancer/50dc6c495c0c9188/
-#          priority: 1
-#          conditions:
-#            host: example.com
-#            path: /hello
-
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
-
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
